force-app/main/default/objects/Case/fields/Cantidad_repuesto__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_repuesto__c</fullName>
    <label>Cantidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>