force-app/main/default/objects/Case/fields/caso_abierto__c.field-meta.xml
<CustomField>
    <fullName>caso_abierto__c</fullName>
    <formula>IF(  OR(TEXT( Status)  = &quot;Nuevo&quot;, TEXT( Status)  = &quot;Escalado&quot;,TEXT( Status)  = &quot;Control de Calidad&quot;, TEXT( Status)=&quot;Enproceso&quot;,TEXT( Status)=&quot;Aprobado&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caso abierto</label>
    <type>Checkbox</type>
</CustomField>