force-app/main/default/objects/Case/fields/Codigo_repuesto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_repuesto__c</fullName>
    <label>Código</label>
    <length>20</length>
    <type>Text</type>
</CustomField>