force-app/main/default/objects/Case/fields/Costo_Contable__c.field-meta.xml
<CustomField>
    <fullName>Costo_Contable__c</fullName>
    <label>Costo Contable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>