force-app/main/default/objects/Case/fields/Descripcion_repuesto__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_repuesto__c</fullName>
    <label>Descripción</label>
    <length>100</length>
    <type>Text</type>
</CustomField>