force-app/main/default/objects/Case/fields/Dictamen__c.field-meta.xml
<CustomField>
    <fullName>Dictamen__c</fullName>
    <label>Dictamen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A favor</fullName>
            </value>
            <value>
                <fullName>En contra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>