force-app/main/default/objects/Case/fields/Ejecutivo_que_reporta__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo_que_reporta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ejecutivo que reporta</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>