force-app/main/default/objects/Case/fields/Evidencias_Entregadas2__c.field-meta.xml
<CustomField>
    <fullName>Evidencias_Entregadas2__c</fullName>
    <label>Evidencias Entregadas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clave del tono (cuando aplique)</fullName>
            </value>
            <value>
                <fullName>Facturas</fullName>
            </value>
            <value>
                <fullName>Fotografía, donde se observe la dimensión del defecto</fullName>
            </value>
            <value>
                <fullName>Fotografía de la(s) zona(s) afectada(s)</fullName>
            </value>
            <value>
                <fullName>Fotografía de la etiqueta del producto reclamado</fullName>
            </value>
            <value>
                <fullName>Fotografía indicando defectivo reclamado</fullName>
            </value>
            <value>
                <fullName>Fotografía panorámica, indicando ubicación de zona afectada</fullName>
            </value>
            <value>
                <fullName>Muestra Física</fullName>
            </value>
            <value>
                <fullName>Video sobre producto defectivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>