force-app/main/default/objects/Case/fields/Fecha_de_Fabricaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Fabricaci_n__c</fullName>
    <inlineHelpText>Llenado por Calidad Planta</inlineHelpText>
    <label>Fecha de Fabricación</label>
    <type>TextArea</type>
</CustomField>