force-app/main/default/objects/Case/fields/Feedback_vacio__c.field-meta.xml
<CustomField>
    <fullName>Feedback_vacio__c</fullName>
    <formula>ISBLANK( Feedback__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedback vacio</label>
    <type>Checkbox</type>
</CustomField>