force-app/main/default/objects/Case/fields/Folio_de_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>Folio_de_Reclamacion__c</fullName>
    <label>Folio de Reclamación Asignado</label>
    <length>10</length>
    <type>Text</type>
</CustomField>