force-app/main/default/objects/Case/fields/Jefe_inmediato__c.field-meta.xml
<CustomField>
    <fullName>Jefe_inmediato__c</fullName>
    <formula>Owner:User.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jefe inmediato</label>
    <type>Text</type>
</CustomField>