force-app/main/default/objects/Case/fields/Linea_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Producto__c</fullName>
    <label>Linea de Producto</label>
    <type>TextArea</type>
</CustomField>