force-app/main/default/objects/Case/fields/Lotes_reclamados__c.field-meta.xml
<CustomField>
    <fullName>Lotes_reclamados__c</fullName>
    <label>Lotes Reclamados</label>
    <type>TextArea</type>
</CustomField>