force-app/main/default/objects/Case/fields/Lugar_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_Compra__c</fullName>
    <label>Lugar de Compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Centro_suministrador</valueSetName>
    </valueSet>
</CustomField>