force-app/main/default/objects/Case/fields/Monto_del_reclamo__c.field-meta.xml
<CustomField>
    <fullName>Monto_del_reclamo__c</fullName>
    <label>Monto del reclamo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>