force-app/main/default/objects/Case/fields/Notif_Atencion_Reclamaciones__c.field-meta.xml
<CustomField>
    <fullName>Notif_Atencion_Reclamaciones__c</fullName>
    <formula>IF( AND( TEXT(Status) = &quot;Escalado&quot;, Tiempo_caso_abierto_dias__c &gt;=1),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notif Atencion Reclamaciones</label>
    <type>Checkbox</type>
</CustomField>