force-app/main/default/objects/Case/fields/Notif_Calidad__c.field-meta.xml
<CustomField>
    <fullName>Notif_Calidad__c</fullName>
    <formula>IF( AND( TEXT(Status) = &quot;Control de Calidad&quot;, Tiempo_caso_abierto_dias__c &gt;=2),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notif Calidad</label>
    <type>Checkbox</type>
</CustomField>