force-app/main/default/objects/Case/fields/Notif_Desarrollo__c.field-meta.xml
<CustomField>
    <fullName>Notif_Desarrollo__c</fullName>
    <formula>IF( AND(  TEXT(Status)  = &quot;Enproceso&quot;,  Tiempo_caso_abierto_dias__c  &gt;8),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notif Desarrollo</label>
    <type>Checkbox</type>
</CustomField>