force-app/main/default/objects/Case/fields/Notif_Ejecutivo__c.field-meta.xml
<CustomField>
    <fullName>Notif_Ejecutivo__c</fullName>
    <formula>IF(AND(OR(TEXT(Status)=&quot;Procede&quot;,TEXT(Status)=&quot;Merged&quot;),(NOW()- ClosedDate )&gt;2, Feedback_vacio__c =true),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notif. Ejecutivo</label>
    <type>Checkbox</type>
</CustomField>