force-app/main/default/objects/Case/fields/Piezas_Reclamadas__c.field-meta.xml
<CustomField>
    <fullName>Piezas_Reclamadas__c</fullName>
    <label>Cantidad Reclamada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>