force-app/main/default/objects/Case/fields/Plan_de_Acci_n__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Acci_n__c</fullName>
    <label>Plan de Acción</label>
    <type>TextArea</type>
</CustomField>