force-app/main/default/objects/Case/fields/Productos__c.field-meta.xml
<CustomField>
    <fullName>Productos__c</fullName>
    <label>Productos</label>
    <type>TextArea</type>
</CustomField>