force-app/main/default/objects/Case/fields/Regi_n__c.field-meta.xml
<CustomField>
    <fullName>Regi_n__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>