force-app/main/default/objects/Case/fields/Sin_escalamiento__c.field-meta.xml
<CustomField>
    <fullName>Sin_escalamiento__c</fullName>
    <formula>IF( AND( TEXT( Status ) = &quot;Nuevo&quot;,  Tiempo_caso_abierto_dias__c   &gt;2),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sin escalamiento</label>
    <type>Checkbox</type>
</CustomField>