force-app/main/default/objects/Case/fields/Solucion__c.field-meta.xml
<CustomField>
    <fullName>Solucion__c</fullName>
    <label>Solución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio físico</fullName>
            </value>
            <value>
                <fullName>Nota de Crédito</fullName>
            </value>
            <value>
                <fullName>Reposición de material</fullName>
            </value>
            <value>
                <fullName>Aclaración</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>