force-app/main/default/objects/Case/fields/Tiempo_caso_abierto_dias__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_caso_abierto_dias__c</fullName>
    <formula>IF( caso_abierto__c =true, NOW() - CreatedDate ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo Caso abierto (dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>