force-app/main/default/objects/Case/fields/Tiempo_de_resolucion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_de_resolucion__c</fullName>
    <formula>ABS(ClosedDate  -  CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de resolución (Días)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>