force-app/main/default/objects/Case/fields/Valor_de_la_reclamaci_n_c__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_la_reclamaci_n_c__c</fullName>
    <label>Valor de la reclamación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>