force-app/main/default/objects/Case/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <label>Vigencia</label>
    <type>Date</type>
</CustomField>